<resources>
    <string name="app_name">Followers Manager</string>
    <string name="three_ellipses">…</string>
    <string name="following_F_capitalized">Following</string>
    <string name="followers_f_capitalized">Followers</string>
    <string name="app_functions_text">Take better control of your twitter audience, see who unfollows you, who you do not follow, and more.</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="welcome">Welcome</string>
    <string name="API_KEY">Uh17KtEpyab0nVuBi1ZEmCXmO</string>
    <string name="API_SECRET">ONtsQ8qCEbULwPjTLbLn2u6LJaDijFx5QW6szOStwwf67m6upF</string>
    <string name="new_followers_btn_default_text">New Followers (..)</string>
    <string name="new_unfollowers_btn_default_text">New Unfollowers (..)</string>
    <string name="non_followers_btn_default_text">Non-Followers (..)</string>
    <string name="fans_btn_default_text">Fans (..)</string>
    <string name="mutual_followers_btn_default_text">Mutual Followers (..)</string>
    <string name="whitelisted_users_btn_default_text">Whitelisted Users (..)</string>
    <string name="search_users_btn_text">Search Users</string>
    <string name="refresh">refresh</string>
    <string name="follow_all_lowercase">follow</string>
    <string name="unfollow_all_lowercase">unfollow</string>
    <string name="screen_name">\@screen name</string>
    <string name="name">name</string>
    <string name="follows_you">follows you</string>
    <string name="doesnt_follow_you">doesn\'t follow you</string>
    <string name="no_valid_list">No valid list to show</string>
    <string name="still_loading">Still loading…</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="description_text">user description text. let\'s see how long it can go. user description text.</string>
    <string name="location">location</string>
    <string name="date_joined">date joined</string>
    <string name="url">url</string>
    <string name="followers_manager_package_name">play.google.com/id?com.gananidevs.followersmanager</string>
    <string name="view_on_twitter">view profile on twitter</string>
    <string name="question_mark">\?</string>
    <string name="cancel">Cancel</string>
    <string name="people_who_don_t_follow_you_back">People who don\'t follow you back</string>
    <string name="remove">remove</string>
    <string name="kindly_follow_back">kindly follow back</string>
    <string name="please_follow_back">please follow back</string>
    <string name="send">send</string>
    <string name="request_follow_back">Request follow back</string>
    <string name="add_to_whitelist">Add to whitelist</string>
    <string name="cannot_carry_out_action">Cannot carry out action right now, pls wait for</string>
    <string name="minutes">minutes</string>
    <string name="saved">Saved!</string>
    <string name="profile">Profile</string>
    <string name="confirm_action">confirm action</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="end_reached">End reached!</string>
    <string name="clear">clear</string>
    <string name="nothing_to_view">Nothing to view</string>
    <string name="people_who_follow_you_back">People who follow you back</string>
    <string name="people_you_dont_follow_back">People you don\'t follow back</string>
    <string name="people_you_dont_wanna_unfollow">People you don\'t want to unfollow</string>
    <string name="people_who_follow_you">people who follow you</string>
    <string name="people_you_are_following">People you are following</string>
    <string name="people_who_follow">People who follow</string>
    <string name="people_who">People who</string>
    <string name="who_unfollowed_recently">People who unfollowed you recently</string>
    <string name="who_followed_you_recently">People who followed you recently</string>
    <string name="search">Search…</string>
    <string name="search_results">Search Results:</string>
    <string name="loading">loading…</string>
    <string name="banner_ad_unit_id">ca-app-pub-3891532626633016/1543772183</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3891532626633016/3950443671</string>
    <string name="native_ad_unit_id">ca-app-pub-3891532626633016/1205409571</string>
    <string name="admob_app_id">ca-app-pub-3891532626633016~8817162512</string>
    <string name="log_out">Log out</string>
    <string name="share_this_app">Share this App</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="open_drawer">open</string>
    <string name="close_drawer">close</string>
    <string name="app_share_intent_subject">Followers Manager App Link</string>
    <string name="exit_confirm_dialog_msg">Sure you want to exit?</string>
    <string name="suspended_user">suspended user</string>
    <string name="whitelisted_user">whitelisted user</string>
    <string name="view_followers">View followers</string>
    <string name="view_following">View following</string>
    <string name="remove_from_whitelist">Remove from Whitelist</string>
    <string name="just_view_on_twitter">View on twitter</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="in_app_purchase_note">* Note that this is not a Subscription. It is a one-time purchase. After it expires, you can re-purchase it again.</string>
    <string name="okay">okay</string>
    <string name="later">later</string>
    <string name="rate_app_request_msg">If you are enjoying this app, please take a minute of your time to give us a 5 star rating.</string>
    <string name="new_version_dialog_message">New version available. Please update app to enjoy the latest features</string>
    <string name="proceed">proceed</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
</resources>
