<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/ad_removal_menu_group" android:checkableBehavior="none">
        <item android:title="@string/remove_ads"
            android:icon="@drawable/ic_shop_24dp"
            android:id="@+id/action_remove_ads"/>
    </group>

    <group android:id="@+id/menu_bottom"
        android:checkableBehavior="none">

        <item android:title="@string/share_this_app"
            android:id="@+id/action_share_app"
            android:icon="@drawable/ic_share_24dp"/>

        <item android:title="@string/rate_this_app"
            android:id="@+id/action_rate_app"
            android:icon="@drawable/ic_stars_24dp"/>
    </group>

    <group android:checkableBehavior="none">
        <item android:title="@string/log_out"
            android:icon="@drawable/ic_exit"
            android:id="@+id/action_log_out"/>
    </group>

</menu>