<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:id="@+id/kindly_follow_back_radio"
            android:layout_height="wrap_content"
            android:text="@string/kindly_follow_back"
            android:textColor="@color/tw__solid_white"
            android:textSize="16sp"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pls_follow_back_radio"
            android:textSize="16sp"
            android:text="@string/please_follow_back"
            android:textColor="@color/tw__solid_white" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_alignStart="@id/request_tweet_tv"
        android:layout_alignEnd="@id/request_tweet_tv"
        android:background="@color/main_activity_low_emphasis_text_color"
        android:layout_below="@id/request_tweet_tv"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kindly_follow_back"
        android:id="@+id/request_tweet_tv"
        android:layout_below="@id/radio_group"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/light_gray_text"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/request_tweet_tv"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="17sp"
        android:paddingStart="12dp"
        android:paddingTop="4dp"
        android:paddingEnd="12dp"
        android:paddingBottom="9dp"
        android:textColor="@color/tw__solid_white"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:theme="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:elevation="3dp"
        app:cornerRadius="8dp"
        android:textStyle="bold"
        android:text="@string/send"/>


</RelativeLayout>