<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@color/divider_line_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/user_item_text_margin_start"
            android:layout_marginBottom="2dp"
            android:text="@string/screen_name"
            android:textSize="15sp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/user_item_name_light_gray"
            app:layout_constraintStart_toEndOf="@id/profile_image"
            app:layout_constraintEnd_toStartOf="@id/dropDownArrow"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintBottom_toTopOf="@id/follow_unfollow_button" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/screen_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/user_item_text_margin_start"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/name"
            android:textSize="14sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/ccc_light_gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_image" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/follow_status_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/user_item_text_margin_start"
            android:paddingStart="5dp"
            android:paddingTop="2dp"
            android:paddingEnd="5dp"
            android:paddingBottom="3dp"
            android:text="@string/doesnt_follow_you"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textStyle="normal"
            app:cornerRadius="5dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/main_activity_low_emphasis_text_color"
            app:layout_constraintTop_toBottomOf="@id/screen_name_tv"
            app:layout_constraintStart_toEndOf="@+id/profile_image" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/follow_unfollow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="9dp"
            android:paddingTop="3dp"
            android:paddingEnd="8dp"
            android:paddingBottom="5dp"
            android:text="@string/unfollow_all_lowercase"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            android:textStyle="normal"
            app:cornerRadius="10dp"
            android:gravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dropDownArrow"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/follow_unfollow_button"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/arrow_down_float" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/follow_status_button"
            app:layout_constraintTop_toBottomOf="@id/follow_status_button"
            android:layout_marginTop="5dp"
            android:background="@color/main_activity_low_emphasis_text_color" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>