<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingTop="18dp"
    android:paddingBottom="10dp"
    android:paddingStart="22dp"
    android:paddingEnd="22dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/buttonsContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_tv">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="New Followers (..)"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/ic_chevron_right_black_24dp"
                    app:iconPadding="10dp"
                    app:iconSize="20dp"
                    app:iconTint="#E82E57" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="New unfollowers (..)"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/ic_chevron_right_black_24dp"
                    app:iconPadding="10dp"
                    app:iconSize="20dp"
                    app:iconTint="#E82E57" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="Non-Followers (..)"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/ic_chevron_right_black_24dp"
                    app:iconPadding="10dp"
                    app:iconSize="20dp"
                    app:iconTint="#E82E57" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="Fans (..)"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/ic_chevron_right_black_24dp"
                    app:iconPadding="10dp"
                    app:iconSize="20dp"
                    app:iconTint="#E82E57" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="Mutual Followers (..)"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/ic_chevron_right_black_24dp"
                    app:iconPadding="10dp"
                    app:iconSize="20dp"
                    app:iconTint="#E82E57" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="Whitelisted Users (..)"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/ic_chevron_right_black_24dp"
                    app:iconPadding="10dp"
                    app:iconSize="20dp"
                    app:iconTint="#E82E57" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="Search Users"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="16sp"
                    app:cornerRadius="20dp"
                    app:icon="@drawable/ic_chevron_right_black_24dp"
                    app:iconPadding="10dp"
                    app:iconSize="20dp"
                    app:iconTint="#E82E57" />

            </LinearLayout>


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView"
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:layout_marginTop="10dp"
                android:src="@android:color/white"
                app:layout_constraintBottom_toTopOf="@id/screen_name_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.06" />

            <TextView
                android:id="@+id/following_count_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/three_ellipses"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/circleImageView"
                app:layout_constraintTop_toTopOf="@+id/circleImageView" />

            <TextView
                android:id="@+id/following_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/following_F_capitalized"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#308AB1"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/circleImageView" />

            <TextView
                android:id="@+id/followers_count_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/three_ellipses"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/circleImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/circleImageView" />

            <TextView
                android:id="@+id/followers_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/followers_f_capitalized"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#308AB1"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
                app:layout_constraintEnd_toStartOf="@+id/circleImageView"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/screen_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/three_ellipses"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#308AB1"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="@+id/circleImageView"
                app:layout_constraintStart_toStartOf="@+id/circleImageView"
                app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

            <TextView
                android:id="@+id/name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_ellipses"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/circleImageView"
                app:layout_constraintStart_toStartOf="@+id/circleImageView"
                app:layout_constraintTop_toBottomOf="@+id/screen_name_tv" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/divider_line_color"
                app:layout_constraintBottom_toTopOf="@+id/buttonsContainer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>